# lead_gen_v01

./: .gitignore  README.md  funding_checker.py  job_store.py  main.py  pipeline.py  pyproject.toml  requirements.txt  scoring.py  scraper.py  sheets_helper.py
backend/: funding_checker.py  main.py  pipeline.py  requirements.txt  review_finder.py  scoring.py  scraper.py  sheets_helper.py
frontend/: index.html  package-lock.json  script.js  style.css
frontend/public/: index.html
frontend/src/api/: client.js
frontend/src/components/: App.jsx  ConfigPanel.jsx  HomePage.jsx  RunHistory.jsx  RunMonitor.jsx  RunPage.jsx  SheetsPage.jsx  Sidebar.jsx  StatusBadge.jsx  Topbar.jsx
frontend/src/constants/: defaults.js
frontend/src/styles/: global.css
frontend/src/utils/: storage.js
