[project]
name = "lead-gen-v01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client==1.7.1",
    "dotenv>=0.9.9",
    "fastapi==0.115.0",
    "google-auth==2.34.0",
    "groq==0.11.0",
    "gspread==6.1.2",
    "openai>=2.40.0",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "rapidfuzz>=3.14.5",
    "requests==2.32.3",
    "uvicorn[standard]==0.30.6",
]
